# colorbalance

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
colorbalance_python/: README.md  color_balance_analyzer.py  color_balance_v2.py  requirements.txt
integration_test/: simple_test.dart
lib/: constants.dart  main.dart  worker.dart
lib/screens/: home_screen.dart  inspector_screen.dart  processing_screen.dart
lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
rust/: Cargo.toml
rust/src/: api.rs  core.rs  frb_generated.rs  lib.rs  main.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_colorbalance.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_colorbalance.podspec
rust_builder/windows/: CMakeLists.txt
